--- a/layout/news.html
+++ b/layout/news.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221208231134">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221208231134">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221208231134">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221209234202">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221209234202">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221209234202">
 
 
 </head>
@@ -123,6 +123,7 @@
 							<div class="news__main-subtitle">
 								Профессионализм, скорость, качество – привычные принципы работы компании ПСК обрели новое звучание.
 							</div>
+							<span class="news__main-more more-link">Подробнее</span>
 						</div>
 						<a href="/article.html" class="news__main-link"></a>
 					</div>
@@ -259,11 +260,32 @@
 							</a>
 						</div>
 					</div>
-					<div class="news__more-btn">
-						<a href="" class="btn btn-blue btn-lg">
-							Загрузить еще
-						</a>
-					</div>
+					<ul class="news__pagination pagination">
+						<li class="pagination__item pagination__item-left">
+							<a href="" aria-disabled="true" class="pagination__link icon-arrow"></a>
+						</li>
+						<li class="pagination__item">
+							<a href="" class="pagination__link active">01</a>
+						</li>
+						<li class="pagination__item">
+							<a href="" class="pagination__link">02</a>
+						</li>
+						<li class="pagination__item">
+							<a href="" class="pagination__link">03</a>
+						</li>
+						<li class="pagination__item">
+							<a href="" class="pagination__link">04</a>
+						</li>
+						<li class="pagination__item">
+							...
+						</li>
+						<li class="pagination__item">
+							<a href="" class="pagination__link">24</a>
+						</li>
+						<li class="pagination__item pagination__item-right">
+							<a href="" class="pagination__link icon-arrow"></a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</main>
@@ -433,14 +455,17 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221208231134"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js?_v=20221208231134"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221208231134"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221209234202"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221209234202"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221208231134"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221208231134"></script>
 
-<script src="js/app.min.js?_v=20221208231134"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js?_v=20221209234202"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221209234202"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221209234202"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221209234202"></script>
+<script src="https://www.youtube.com/iframe_api?_v=20221209234202"></script>
+
+<script src="js/app.min.js?_v=20221209234202"></script>
 
 </body>
 
