--- a/layout/project.html
+++ b/layout/project.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221208231134">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221208231134">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221208231134">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221209234202">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221209234202">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221209234202">
 
 
 </head>
@@ -118,15 +118,15 @@
 								<picture><source srcset="img/projects/project.webp"type="image/webp"><img src="img/projects/project.jpg" class="cover-image" alt="news project"></picture>
 							</div>
 						</div>
-						<article class="article__content">
+						<article class="article__content article__content-project">
 							<time datetime="2022-01-25">Дата реализации проекта: 25 января 2022</time>
 							<div>
 								<h1>
 									Реконструкция подстанции Портовая
 								</h1>
-								<h2>
+								<h3>
 									О проекте
-								</h2>
+								</h3>
 								<p>
 									<mark>
 										Наша компания вела поставку материалов и оборудования для модернизации морально
@@ -463,14 +463,17 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221208231134"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js?_v=20221208231134"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221208231134"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221209234202"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221209234202"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221208231134"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221208231134"></script>
 
-<script src="js/app.min.js?_v=20221208231134"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js?_v=20221209234202"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221209234202"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221209234202"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221209234202"></script>
+<script src="https://www.youtube.com/iframe_api?_v=20221209234202"></script>
+
+<script src="js/app.min.js?_v=20221209234202"></script>
 
 </body>
 
