--- a/layout/reviews.html
+++ b/layout/reviews.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221208231134">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221208231134">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221208231134">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221209234202">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221209234202">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221209234202">
 
 
 </head>
@@ -115,7 +115,7 @@
 			</section>
 			<div class="page__sert sert">
 				<div class="sert__container">
-					<div class="sert__item">
+					<div class="sert__item sert__item-sm">
 						<a href="img/reviews/01.jpg" data-fslightbox="sert" class="sert__image">
 							<picture><source srcset="img/reviews/01.webp"type="image/webp"><img src="img/reviews/01.jpg" alt="reviews sert"></picture>
 						</a>
@@ -123,7 +123,7 @@
 							Отзыв Казанского энергетического колледжа
 						</div>
 					</div>
-					<div class="sert__item">
+					<div class="sert__item sert__item-sm">
 						<a href="img/reviews/02.jpg" data-fslightbox="sert" class="sert__image">
 							<picture><source srcset="img/reviews/02.webp"type="image/webp"><img src="img/reviews/02.jpg" alt="reviews sert"></picture>
 						</a>
@@ -131,7 +131,7 @@
 							Отзыв МБДОУ Габишевского детского сада одуванчик
 						</div>
 					</div>
-					<div class="sert__item">
+					<div class="sert__item sert__item-sm">
 						<a href="img/reviews/03.jpg" data-fslightbox="sert" class="sert__image">
 							<picture><source srcset="img/reviews/03.webp"type="image/webp"><img src="img/reviews/03.jpg" alt="reviews sert"></picture>
 						</a>
@@ -139,7 +139,7 @@
 							Отзыв благотворительного фонда
 						</div>
 					</div>
-					<div class="sert__item">
+					<div class="sert__item sert__item-sm">
 						<a href="img/reviews/04.jpg" data-fslightbox="sert" class="sert__image">
 							<picture><source srcset="img/reviews/04.webp"type="image/webp"><img src="img/reviews/04.jpg" alt="reviews sert"></picture>
 						</a>
@@ -316,14 +316,17 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221208231134"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js?_v=20221208231134"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221208231134"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221209234202"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221209234202"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221208231134"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221208231134"></script>
 
-<script src="js/app.min.js?_v=20221208231134"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js?_v=20221209234202"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221209234202"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221209234202"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221209234202"></script>
+<script src="https://www.youtube.com/iframe_api?_v=20221209234202"></script>
+
+<script src="js/app.min.js?_v=20221209234202"></script>
 
 </body>
 
