--- a/src/site/templates/articles/partial/articles__first__card.htm
+++ b/src/site/templates/articles/partial/articles__first__card.htm
@@ -3,12 +3,13 @@
                             <picture><source srcset="{{PREVIEWWEBP}}" type="image/webp"><img src="{{PREVIEW}}" class="cover-image" alt="{{ALT}}" title="{{ALT}}"></picture>
                         </div>
                         <div class="news__main-desc">
-                            <h2 class="news__main-title title-lg">
+                            <h2 class="news__main-title {{TITLECLASS}}">
                                 {{TITLE}}
                             </h2>
                             <div class="news__main-subtitle">
                                 {{SHORTDESCRIPTION}}
                             </div>
+                            <span class="news__main-more more-link">Подробнее</span>
                         </div>
                         <a href="{{LINK}}" class="news__main-link"></a>
                     </div>
