--- a/src/site/templates/contacts/contacts.htm
+++ b/src/site/templates/contacts/contacts.htm
@@ -43,10 +43,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="contacts__map">
-                        <iframe
-                            src="https://yandex.ru/map-widget/v1/?um=constructor%3A6fa55a0a7e236e7bda9d050524dc98cbc08a7ccdb15a6b6e47a9715c04dd7fac&amp;source=constructor&amp;scroll=false"></iframe>
-                    </div>
+                    <div class="contacts__map" id="map"></div>
                 </div>
             </div>
             {{FORM}}
