--- a/src/site/templates/layout/layout.htm
+++ b/src/site/templates/layout/layout.htm
@@ -64,11 +64,14 @@
 		{{INCLUDE:FOOTER}}
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js{{VERSION}}"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js{{VERSION}}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js{{VERSION}}"></script>
 
+	<!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js{{VERSION}}"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js{{VERSION}}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js{{VERSION}}"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221209234202"></script>
+	<script src="https://www.youtube.com/iframe_api{{VERSION}}"></script>
+
 
 	<script src="/js/app.min.js{{VERSION}}"></script>
 
