--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -40,6 +40,7 @@
 }
 
 .form__checkbox-input:checked + .form__checkbox-content::before,
+.succes::before,
 .more-link::before,
 .swiper-button-prev::before,
 .swiper-button-next::before,
@@ -96,7 +97,8 @@
 }
 
 .icon-check:before,
-.form__checkbox-input:checked + .form__checkbox-content:before {
+.form__checkbox-input:checked + .form__checkbox-content:before,
+.succes:before {
   content: "\e904";
 }
 
@@ -153,6 +155,73 @@ body .modal-lock {
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
   padding: 0 1em;
+}
+
+.popup {
+  position: fixed;
+  background: rgba(15, 21, 33, 0.9);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  visibility: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-transition: all 0.3s linear 0s;
+  -o-transition: all 0.3s linear 0s;
+  transition: all 0.3s linear 0s;
+  z-index: 55555;
+}
+
+.popup.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup.open .popup__body {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.popup__content {
+  position: relative;
+  min-height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.popup__body {
+  -webkit-transition: all 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 0s;
+  -o-transition: all 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 0s;
+  transition: all 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 0s;
+  opacity: 0;
+  -webkit-transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
+          transform: translateY(-100%);
+  width: 100%;
+  max-width: 597px;
+  background: #fff;
+  padding: 3.75em 0.9375em;
+}
+
+.popup__close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  color: #060d2c;
+  -webkit-transition: color 0.3s ease 0s;
+  -o-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
 }
 
 .navigation {
@@ -392,18 +461,37 @@ body .modal-lock {
 
 .pagination__item.pagination__item-right {
   margin: 0em 0em 0em auto;
-  color: #B6BBC0;
 }
 
 .pagination__item.pagination__item-left {
   margin: 0em auto 0em 0em;
-  color: #B6BBC0;
 }
 
 .pagination__item.pagination__item-left ::before {
   -webkit-transform: rotate(180deg);
       -ms-transform: rotate(180deg);
           transform: rotate(180deg);
+}
+
+.pagination__item.pagination__item-right .pagination__link,
+.pagination__item.pagination__item-left .pagination__link {
+  background: #fff;
+  color: #ff6859;
+  border-color: #ff6859;
+}
+
+.pagination__item.pagination__item-right .pagination__link:hover,
+.pagination__item.pagination__item-left .pagination__link:hover {
+  background: #FFF6F5;
+}
+
+.pagination__item.pagination__item-right .pagination__link:disabled,
+.pagination__item.pagination__item-right .pagination__link[aria-disabled=true],
+.pagination__item.pagination__item-left .pagination__link:disabled,
+.pagination__item.pagination__item-left .pagination__link[aria-disabled=true] {
+  border-color: #BCBCBC;
+  color: #BCBCBC;
+  pointer-events: none;
 }
 
 .pagination__link {
@@ -430,6 +518,7 @@ body .modal-lock {
 .pagination__link.active {
   background: #ff6859;
   color: #fff;
+  border-color: #ff6859;
 }
 
 #gradient-canvas {
@@ -565,6 +654,84 @@ body .modal-lock {
   margin: 2.2222222222em 0em 0em 0em;
 }
 
+.count-number {
+  padding: 0em 0.125em 0em 0em;
+}
+
+.succes {
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-name: fade;
+          animation-name: fade;
+  text-align: center;
+}
+
+.succes::before {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  width: 96px;
+  height: 96px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #2dc5c7;
+  font-size: 33px;
+  color: #fff;
+  margin: 0 auto 2rem;
+}
+
+.succes__text {
+  font-weight: 500;
+  line-height: 1.2;
+  font-size: 18px;
+}
+
+.succes__title {
+  font-size: 28px;
+  line-height: 1.2857142857;
+}
+
+.succes__subtitle {
+  margin: 0.6em 0em 0em 0em;
+}
+
+.fail__subtitle {
+  margin: 0.625em 0em 0em 0em;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  to {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  to {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 8px;
 }
@@ -607,15 +774,19 @@ body .modal-lock {
   -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
           transform: translateY(-50%);
-  color: #B6BBC0;
-  -webkit-transition: color 0.3s ease 0s;
-  -o-transition: color 0.3s ease 0s;
-  transition: color 0.3s ease 0s;
-  display: none;
+  color: #b6bbc0;
+  -webkit-transition: color 0.3s ease 0s, opacity 0.3s ease 0s, visibility 0.3s ease 0s;
+  -o-transition: color 0.3s ease 0s, opacity 0.3s ease 0s, visibility 0.3s ease 0s;
+  transition: color 0.3s ease 0s, opacity 0.3s ease 0s, visibility 0.3s ease 0s;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .form__input-clear.active {
-  display: block;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
 }
 
 .form__title {
@@ -690,8 +861,8 @@ body .modal-lock {
 }
 
 .form__input._error {
-  border: 1px solid #e41111;
   color: #e41111;
+  background: #fff1ed;
 }
 
 .form__textarea {
@@ -754,6 +925,7 @@ body .modal-lock {
 
 .form__checkbox-input._error + .form__checkbox-content::before {
   border: 1px solid #e41111;
+  background: #fff1ed;
 }
 
 .form__checkbox-content {
@@ -778,6 +950,7 @@ body .modal-lock {
   height: 24px;
   background: #fff;
   margin-right: 0.75rem;
+  padding-top: 0.2222222222em;
   font-size: 9px;
   cursor: pointer;
   display: -webkit-box;
@@ -1125,8 +1298,6 @@ body .modal-lock {
 
 .footer-copy__container {
   border-top: 1px solid rgba(223, 224, 225, 0.8);
-  padding-top: 1.5em;
-  padding-bottom: 2.5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1134,6 +1305,7 @@ body .modal-lock {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding: 1.5em 1em;
 }
 
 .footer-copy__text {
@@ -1493,6 +1665,16 @@ body .modal-lock {
   padding: 1.5625em 0.9375em;
 }
 
+.news__main-more {
+  margin: 1.25em 0em 0em 0em;
+  -webkit-transition: margin 0.3s ease 0s, opacity 0.3s ease 0s, visibility 0.3s ease 0s, font-size 0.3s ease 0s;
+  -o-transition: margin 0.3s ease 0s, opacity 0.3s ease 0s, visibility 0.3s ease 0s, font-size 0.3s ease 0s;
+  transition: margin 0.3s ease 0s, opacity 0.3s ease 0s, visibility 0.3s ease 0s, font-size 0.3s ease 0s;
+  opacity: 0;
+  font-size: 0;
+  visibility: hidden;
+}
+
 .news__main-title {
   color: #fff;
   -webkit-transition: color 0.3s ease 0s;
@@ -1595,7 +1777,7 @@ body .modal-lock {
   margin: 1.5em 0em 0em 0em;
 }
 
-.news__more-btn {
+.news__pagination {
   margin: 3.75em 0em 0em 0em;
 }
 
@@ -1955,6 +2137,8 @@ body .modal-lock {
 
 .contacts__map {
   margin: 2.5em 0em 0em 0em;
+  width: 100%;
+  height: 288px;
 }
 
 .contacts__map iframe {
@@ -2003,6 +2187,18 @@ body .modal-lock {
 
 .article__content {
   margin: 1.5em 0em 0em 0em;
+}
+
+.article__content.article__content-project p {
+  color: #060D2C;
+}
+
+.article__content.article__content-project p mark {
+  border-left: 4px solid #ff6859;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.2916666667;
+  padding: 0em 0em 0em 0.6666666667em;
 }
 
 .article__content time {
@@ -2064,7 +2260,7 @@ body .modal-lock {
   margin: 0em 0em 1.5rem 0rem;
 }
 
-.article__content > ul li {
+.article__content div > ul li {
   position: relative;
   font-size: 14px;
   font-weight: 500;
@@ -2073,7 +2269,7 @@ body .modal-lock {
   padding: 0em 0em 0em 0.8888888889em;
 }
 
-.article__content > ul li::before {
+.article__content div > ul li::before {
   content: "";
   position: absolute;
   top: 50%;
@@ -2087,7 +2283,7 @@ body .modal-lock {
   background: #ff6859;
 }
 
-.article__content > ul li:not(:last-child) {
+.article__content div > ul li:not(:last-child) {
   margin: 0em 0em 0.8888888889em 0rem;
 }
 
@@ -2124,7 +2320,7 @@ body .modal-lock {
 .article__content table td ul li::before {
   content: "";
   position: absolute;
-  top: 9px;
+  top: 0.75em;
   left: 0;
   width: 3px;
   height: 3px;
@@ -2153,6 +2349,8 @@ body .modal-lock {
   -webkit-transition: opacity 0.3s ease 0s;
   -o-transition: opacity 0.3s ease 0s;
   transition: opacity 0.3s ease 0s;
+  display: inline-block;
+  border-radius: 50%;
 }
 
 .article__social:not(:last-child) {
@@ -2167,6 +2365,7 @@ body .modal-lock {
   background-image: -webkit-gradient(linear, left top, left bottom, from(#2aabee), color-stop(99.26%, #229ed9));
   background-image: -o-linear-gradient(top, #2aabee 0%, #229ed9 99.26%);
   background-image: linear-gradient(180deg, #2aabee 0%, #229ed9 99.26%);
+  font-size: 58px;
 }
 
 .article__social.icon-vk {
@@ -2193,6 +2392,15 @@ body .modal-lock {
   border: 1px solid #dfe0e1;
   padding: 1em 0.875em;
   text-align: center;
+}
+
+.sert__item.sert__item-sm .sert__image img {
+  width: 190px;
+  -webkit-transition: -webkit-transform 0.3s ease 0s;
+  transition: -webkit-transform 0.3s ease 0s;
+  -o-transition: transform 0.3s ease 0s;
+  transition: transform 0.3s ease 0s;
+  transition: transform 0.3s ease 0s, -webkit-transform 0.3s ease 0s;
 }
 
 .sert__image {
@@ -2603,7 +2811,7 @@ body .modal-lock {
 .product {
   background: #ffffff;
   border: 1px solid #dfe0e1;
-  padding: 0.5em 0.875em;
+  padding: 0.5em 0.875em 0.75em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2670,7 +2878,7 @@ body .modal-lock {
 }
 
 .more-products__grid {
-  margin: 2.5em 0em 0em 0em;
+  margin: 1.5em 0em 0em 0em;
   display: -ms-grid;
   display: grid;
   gap: 8px;
@@ -2682,12 +2890,31 @@ body .modal-lock {
   margin: 1.5em 0em 0em 0em;
 }
 
+.current-product__gost {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.625;
+}
+
 .product-label {
   margin: 0.5em 0em 0em 0em;
   position: relative;
   background: #ff6859;
+  display: block;
   color: #fff;
   padding: 0.375em 0.75em 0.375em 3.5em;
+  font-size: 16px;
+  -webkit-transition: background-color 0.3s ease 0s;
+  -o-transition: background-color 0.3s ease 0s;
+  transition: background-color 0.3s ease 0s;
+}
+
+.product-label:hover {
+  background-color: #d8574a;
+}
+
+.product-label:active {
+  background-color: #c75145;
 }
 
 .product-label::before {
@@ -2723,9 +2950,6 @@ body .modal-lock {
   font-size: 14px;
   font-weight: 500;
   line-height: 1.2916666667;
-  -webkit-transition: color 0.3s ease 0s;
-  -o-transition: color 0.3s ease 0s;
-  transition: color 0.3s ease 0s;
   white-space: nowrap;
 }
 
@@ -2737,23 +2961,25 @@ body .modal-lock {
 .about__body {
   background: #fff;
   padding: 1em;
-}
-
-.about__title {
-  max-width: 900px;
+  border: 1px solid #dfe0e1;
+  border-top: 0;
 }
 
 .about__text {
   margin: 0;
-  max-width: 920px;
 }
 
 .about__text:not(:last-child) {
   margin: 0em 0em 2.5em 0rem;
 }
 
+.about__text p {
+  max-width: 920px;
+  color: #3B3E4B;
+}
+
 .about__text h3 {
-  margin: 0em 0em 1.125rem 0rem;
+  margin: 0em 0em 2.375rem 0rem;
 }
 
 .about__text h4 {
@@ -2789,7 +3015,6 @@ body .modal-lock {
 }
 
 .about__numbers-text {
-  margin: 0.5em 0em 0em 0em;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.625;
@@ -2858,10 +3083,10 @@ body .modal-lock {
 .equipment__list-item::before {
   content: "";
   position: absolute;
-  top: 0.3888888889em;
+  top: 0.4722222222em;
   left: 0;
-  width: 0.4444444444em;
-  height: 0.4444444444em;
+  width: 8px;
+  height: 8px;
   border-radius: 50%;
   background: #ff6859;
 }
@@ -2907,6 +3132,21 @@ body .modal-lock {
   .title-xl {
     line-height: 1.1964285714;
     font-size: 48px;
+  }
+
+  .succes::before {
+    margin: 0em 1.5rem 0em 0em;
+  }
+
+  .succes {
+    text-align: left;
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 
   .form__row {
@@ -3146,6 +3386,11 @@ body .modal-lock {
     padding: 0 1.5em;
   }
 
+  .popup__body {
+    border-radius: 20px;
+    padding: 4.0625em 5.625em;
+  }
+
   .tabs {
     -ms-grid-columns: 220px 1fr;
     grid-template-columns: 220px 1fr;
@@ -3166,6 +3411,10 @@ body .modal-lock {
 
   .error__status {
     margin: 0em 0em -0.3766233766em 0rem;
+  }
+
+  .succes__text {
+    font-size: 20px;
   }
 
   .form__subtitle {
@@ -3298,6 +3547,7 @@ body .modal-lock {
 
   .footer-copy__container {
     padding-top: 2.5em;
+    padding: 2.5em 1.5em;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -3522,6 +3772,10 @@ body .modal-lock {
     margin: 5em 0em 0em 0em;
   }
 
+  .contacts__map {
+    height: 400px;
+  }
+
   .contacts__map iframe {
     height: 400px;
   }
@@ -3545,6 +3799,10 @@ body .modal-lock {
     padding: 0em 0em 4.375em 0em;
   }
 
+  .article__content.article__content-project time {
+    font-size: 16px;
+  }
+
   .article__content time {
     font-size: 24px;
   }
@@ -3561,7 +3819,7 @@ body .modal-lock {
     font-size: 16px;
   }
 
-  .article__content > ul li {
+  .article__content div > ul li {
     font-size: 18px;
   }
 
@@ -3662,6 +3920,7 @@ body .modal-lock {
   }
 
   .more-products__grid {
+    margin: 2.5em 0em 0em 0em;
     -ms-grid-columns: (1fr)[3];
     grid-template-columns: repeat(3, 1fr);
     gap: 24px;
@@ -3693,6 +3952,7 @@ body .modal-lock {
   }
 
   .about__numbers-text {
+    margin: 0.5em 0em 0em 0em;
     font-size: 16px;
   }
 
@@ -3728,6 +3988,11 @@ body .modal-lock {
 
   .title-lg {
     font-size: 48px;
+  }
+
+  .succes__title {
+    font-size: 48px;
+    line-height: 1.1041666667;
   }
 
   .header-top__contact {
@@ -3914,6 +4179,10 @@ body .modal-lock {
     display: none;
   }
 
+  .article__content.article__content-project p mark {
+    font-size: 24px;
+  }
+
   .article__content h2 {
     font-size: 48px;
   }
@@ -3988,8 +4257,13 @@ body .modal-lock {
   }
 
   .current-product__body {
-    margin-left: 19.25em;
+    margin-left: 19.25rem;
     padding: 0em 0em 0em 1.5em;
+  }
+
+  .current-product__gost {
+    font-size: 24px;
+    line-height: 1.2916666667;
   }
 
   .equipment__caption {
@@ -4118,8 +4392,7 @@ body .modal-lock {
   }
 
   .footer-copy__container {
-    padding-top: 0;
-    padding-bottom: 0;
+    padding: 0 1.5em;
     border-top: 0;
   }
 
@@ -4343,6 +4616,10 @@ body .modal-lock {
     gap: 48px;
   }
 
+  .sert__item.sert__item-sm .sert__image img {
+    width: 225px;
+  }
+
   .sert__image {
     min-height: 320px;
     display: -webkit-box;
@@ -4425,7 +4702,7 @@ body .modal-lock {
   }
 
   .current-product__body {
-    margin-left: 22.5em;
+    margin-left: 22.5rem;
     padding: 0em 0em 0em 3.5em;
   }
 
@@ -4435,10 +4712,6 @@ body .modal-lock {
 
   .product-label::before {
     left: 24px;
-  }
-
-  .about {
-    margin: -3.75em 0em 0em 0em;
   }
 
   .about__body {
@@ -4572,12 +4845,16 @@ body .modal-lock {
   }
 
   .product__link {
-    margin: 1.3333333333em 0em 0em 0em;
+    margin: 1.1666666667em 0em 0em 0em;
     font-size: 12px;
   }
 }
 
 @media (any-hover: hover) {
+  .popup__close:hover {
+    color: #2f80ed;
+  }
+
   .navigation__link:not(.active):hover {
     color: #f7515c;
   }
@@ -4591,13 +4868,6 @@ body .modal-lock {
   .dropdown__list-item:hover {
     background: #ff6859;
     color: #fff;
-  }
-
-  .pagination__item.pagination__item-right .pagination__link:hover,
-  .pagination__item.pagination__item-left .pagination__link:hover {
-    background: #fff;
-    color: #ff6859;
-    border-color: #ff6859;
   }
 
   .pagination__link:hover {
@@ -4651,14 +4921,16 @@ body .modal-lock {
   }
 
   .news__main:hover img {
-    -webkit-transform: scale(1.08);
-        -ms-transform: scale(1.08);
-            transform: scale(1.08);
+    -webkit-transform: scale(1.03);
+        -ms-transform: scale(1.03);
+            transform: scale(1.03);
   }
 
-  .news__main:hover .news__main-title,
-  .news__main:hover .news__main-subtitle {
-    color: #f7515c;
+  .news__main:hover .news__main-more {
+    margin: 1.25em 0em 0em 0em;
+    opacity: 1;
+    visibility: visible;
+    font-size: 18px;
   }
 
   .news__item-link:hover {
@@ -4666,9 +4938,9 @@ body .modal-lock {
   }
 
   .news__item-image:hover img {
-    -webkit-transform: scale(1.15);
-        -ms-transform: scale(1.15);
-            transform: scale(1.15);
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
   }
 
   .team__item-phone:hover {
@@ -4729,9 +5001,5 @@ body .modal-lock {
 
   .product__title:hover {
     color: #f7515c;
-  }
-
-  .product-label__link:hover {
-    color: #060d2c;
   }
 }
