--- a/src/site/templates/components/pagination/c-pagination.htm
+++ b/src/site/templates/components/pagination/c-pagination.htm
@@ -1,4 +1,4 @@
-<ul class="products__pagination pagination">
+<ul class="{{CLASS}} pagination">
 									<li class="pagination__item pagination__item-left">
 										<a href="{{PREVIOUS:LINK}}" class="pagination__link icon-arrow {{PREVIOUS:STATUS}}"></a>
 									</li>
