--- a/src/site/templates/components/articles/bl-news-similar.htm
+++ b/src/site/templates/components/articles/bl-news-similar.htm
@@ -1,9 +1,20 @@
-<div id="bl-news-other" class="border-top">
-            <div class="holder">
-                <h2>{{TITLE}}</h2>
-
-                <ul>
-                    {{LIST}}
-                </ul>
-            </div>
-        </div>
+<section class="page__news news">
+                <div class="news__container">
+                    <div class="news__header">
+                        <h2 class="news__title title-xxl">
+                            {{TITLE}}
+                        </h2>
+                        <a href="/articles/" class="news__more more-link">
+                            Смотреть все
+                        </a>
+                    </div>
+                    <div class="news__items">
+                        {{LIST}}
+                    </div>
+                    <div class="news__btn">
+                        <a href="/articles/" class="btn btn-blue">
+                            Смотреть все
+                        </a>
+                    </div>
+                </div>
+            </section>
