--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="footer__body footer-body">
-        <div class="footer-body__container">
+        <div class="footer-body__container {{CONTAINERCLASS}}">
             <div class="footer-body__main">
                 <div class="footer-body__logo">
                     <img src="/img/logo-black.svg" alt="{{ALT}}" title="{{ALT}}">
